fix_fix: unused binding for creating reviews

--- a/app/src/main/res/layout/activity_follow.xml
+++ b/app/src/main/res/layout/activity_follow.xml
@@ -51,13 +51,13 @@
             tools:text="Follow" />
 
         <ImageView
-            android:id="@+id/followFilterButton"
+            android:id="@+id/createReviewButton"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginEnd="8dp"
             android:layout_gravity="end|center_vertical"
             android:contentDescription="@string/menu"
-            android:src="@drawable/ic_round_filter_alt_24"
+            android:src="@drawable/ic_add"
             app:tint="?attr/colorOnBackground" />
 
         <androidx.cardview.widget.CardView
